# Method-VI

./: .gitignore  ARCHITECTURE-2026-01-01-Post_Test_Run_8.md  ARCHITECTURE-2026-01-05-Phase5-Progression.md  ARCHITECTURE-2026-01-09-Post-Phase5-Update.md  DASHBOARD_IMPLEMENTATION.md  DATABASE_OVERVIEW.md  FIX-021-IMPLEMENTATION-SUMMARY.md  FIX-022-IMPLEMENTATION-SUMMARY.md  FIX-023-IMPLEMENTATION-SUMMARY.md  FIX-024-IMPLEMENTATION-SUMMARY.md  FIX-025-IMPLEMENTATION-SUMMARY.md  FIX-026-IMPLEMENTATION-SUMMARY.md  FIX-027-IMPLEMENTATION-SUMMARY.md  INFRASTRUCTURE_REVIEW.md  INTEGRATION-TEST-REPORT-2025-12-31.md  METRICS_IMPLEMENTATION.md  METRICS_VERIFICATION.md  PHASE-5-TESTING-CHECKLIST.md  PR-DESCRIPTION.md  README.md  STEP0_IMPLEMENTATION.md  STEP0_TEST_REPORT.md  TEST-RESULTS-E2E-2025-12-31.md  TESTING_GUIDE.md  UI_OVERVIEW.md  VERIFICATION_REPORT.md
method-vi/src-tauri/: Cargo.toml  INTEGRATION-TEST-RESULTS-2025-12-31.txt  tauri.conf.json  test-integration.bat  test-metrics.bat  test-results-e2e.txt
method-vi/src-tauri/examples/: test_claude_api.rs  test_e2e_step0.rs  test_e2e_step0_stub.rs  test_integration_metrics.rs  test_scope_pattern_agent.rs
method-vi/src-tauri/src/: lib.rs  main.rs
method-vi/src-tauri/src/agents/: analysis_synthesis.rs  governance_telemetry.rs  mod.rs  orchestrator.rs  scope_pattern.rs  structure_redesign.rs  validation_learning.rs
method-vi/src-tauri/tests/: orchestrator_integration.rs  test_metrics.rs  test_step_1.rs  test_temperature_determinism.rs  test_triggered_metrics_filtering.rs  test_validation_agent.rs
(+91 files in other folders)
